fix(style): overflow on toc

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -30,6 +30,7 @@ button#toc {
   overflow: hidden;
   max-height: none;
   transition: max-height 0.5s ease;
+  position: relative;
 
   &.collapsed > .overflow::after {
     opacity: 0;
